@@ -2,6 +2,8 @@ package S12P11D110.ssacle.domain.study.service;
 
 import S12P11D110.ssacle.domain.study.dto.RecommendUserDTO;
 import S12P11D110.ssacle.domain.study.dto.StudyConditionDTO;
+import S12P11D110.ssacle.domain.study.dto.StudyDTO;
+import S12P11D110.ssacle.domain.study.dto.UserConditionDTO;
 import S12P11D110.ssacle.domain.tempUser.SearchUserDTO;
 import org.springframework.stereotype.Service;
 
@@ -14,22 +16,20 @@ public class RecommendUserService {
 
     public List<RecommendUserDTO> recommendUsers(StudyConditionDTO studyCondition, List<SearchUserDTO> allUsers){
 
-        Set<String> studyTopic = studyCondition.getTopic().stream()
-                .map(Enum::name)
-                .collect(Collectors.toSet());
+        String studyTopic = studyCondition.getTopic();
         // 1. 유저 필터링
         List<SearchUserDTO> filteredUsers = allUsers.stream()
                 .filter(user-> user.getTopics()!=null && user.getMeetingDays()!=null) // topic과 meetingDay가 등록된 유저
-                .filter(user-> user.getTopics().stream().map(Enum::name).anyMatch(studyTopic::contains))
+                .filter(user-> user.getTopics().contains(studyTopic)) // 스터디 주제에 해당 안되는 유저는 제외
                 .filter(user -> {
                     // 가입된 스터디가 없는 유저는 Collections.emptyList()을 반환(null 방지)
                     Set<String> joinedStudies = user.getJoinedStudies() != null ? user.getJoinedStudies() : Collections.emptySet();
                     Set<String> wishStudies = user.getWishStudies() != null ? user.getWishStudies() : Collections.emptySet();
                     Set<String> invitedStudies = user.getInvitedStudies() != null ? user.getInvitedStudies() : Collections.emptySet();
 
-                    boolean isAlreadyJoined = joinedStudies.contains(studyCondition.getId().toString());
-                    boolean isAlreadyWish = wishStudies.contains(studyCondition.getId().toString());
-                    boolean isAlreadyInvited = invitedStudies.contains(studyCondition.getId().toString());
+                    boolean isAlreadyJoined = joinedStudies.contains(studyCondition.getId());
+                    boolean isAlreadyWish = wishStudies.contains(studyCondition.getId());
+                    boolean isAlreadyInvited = invitedStudies.contains(studyCondition.getId());
 
                     // 가입 여부, 초대 여부 확인
                     System.out.println("유저 Id: "+user.getUserId()+", 이미 가입된 유저인가?"+isAlreadyJoined);
@@ -38,13 +38,16 @@ public class RecommendUserService {
 
                     return !(isAlreadyJoined ||isAlreadyWish||isAlreadyInvited);
                 }) // 해당 스터디에 가입된 유저 Or 이미 스터디에 가입 요청 받은 유저 or 이미 요청온 유저 제외
-                .collect(Collectors.toList());
+                .toList();
+        System.out.println("스터디의 topic 원본 데이터: " + studyCondition.getTopic());
+        System.out.println("스터디의 topic 실제 타입: " + studyCondition.getTopic().getClass().getName());
+
         System.out.println("✅ 필터링 후 남은 유저 리스트: " + filteredUsers);
 
         // 2. 코사인 유사도를 기반으로 유저 추천
         Map<SearchUserDTO, Double> userSimilarityMap = new HashMap<>();
         for(SearchUserDTO user : filteredUsers){
-            double similarity = calculateCosineSimilarity(studyCondition, user);
+            double similarity = calculateFiltering(studyCondition, user);
             userSimilarityMap.put(user, similarity);
 
             System.out.println("Calculating similarity for user: " + user.getUserId()); // 디버깅
@@ -61,21 +64,22 @@ public class RecommendUserService {
                         entry.getKey().getUserId(), // TempUser ID
                         entry.getValue(), // 유사도 점수
                         entry.getKey().getNickName(), // Nickname
-                        entry.getKey().getTopics(), // Topic
+                        entry.getKey().getTopics(),   // Topic
                         entry.getKey().getMeetingDays() // MeetingDay
                 )) // DTO 변환
                 .collect(Collectors.toList());
     }
 
-    private double calculateCosineSimilarity(StudyConditionDTO studyCondition, SearchUserDTO user) {
+    private double calculateFiltering(StudyConditionDTO studyCondition, SearchUserDTO user) {
         // 1. 스터디와 유저의 주제 및 모임 요일 벡터화
         Set<String> studyFeatures = new HashSet<>();
-        studyFeatures.addAll(studyCondition.getTopic().stream().map(Enum::name).collect(Collectors.toList())); // Enum → String 변환
-        studyFeatures.addAll(studyCondition.getMeetingDays().stream().map(Enum::name).collect(Collectors.toList())); // Enum → String 변환
+        studyFeatures.add(studyCondition.getTopic());
+        studyFeatures.addAll(studyCondition.getMeetingDays());
 
         Set<String> userFeatures = new HashSet<>();
-        user.getTopics().forEach(topic -> userFeatures.add(topic.name())); // Enum → String 변환
-        user.getMeetingDays().forEach(day -> userFeatures.add(day.name())); // Enum → String 변환
+        userFeatures.addAll(user.getTopics());
+        userFeatures.addAll(user.getMeetingDays());
+
 
         // 2. 교집합 및 합집합 크기를 계산
         Set<String> intersection = new HashSet<>(studyFeatures);
@@ -86,10 +90,48 @@ public class RecommendUserService {
 
         // 3. 코사인 유사도 계산
         if (union.isEmpty()) return 0.0;
-        return (double) intersection.size() / Math.sqrt(studyFeatures.size() * userFeatures.size());
+        double cosineResult = intersection.size() / Math.sqrt(studyFeatures.size() * userFeatures.size());
 
-        // 유효 숫자 처리
-        // 상위 유저 리스트 : 만약 동일한 유사도가 있을 경우 어떻게 할건지
+
+        double filterResult = calculateFilterResult(studyCondition, user);
+        return (cosineResult + filterResult) / 2;
     }
 
+
+    private double calculateFilterResult(StudyConditionDTO studyCondition, SearchUserDTO user) {
+
+
+        // 1. study의topic 개수, meetingDay 개수
+        int topicCount = 1;
+        int meetingDaysCount = studyCondition.getMeetingDays().size();
+
+        // 2. eachOfTopic / eachOfMeetingDay 값 구하기
+        double eachOfTopic = 0.5 / topicCount;
+        double eachOfMeetingDays = 0.5 / meetingDaysCount;
+
+        // 3.겹치는 topic 안겹치는 topic 겹치는 meetingday 안겹치는 meetingday 개수 구하기
+        Set<String> studyTopic = new HashSet<>(Set.of(studyCondition.getTopic()));
+        Set<String> userTopic = new HashSet<>(user.getTopics());
+//        user.getTopics().forEach(topics -> userTopic.add(topics.name()));
+        Set<String> studyMeetingDays = new HashSet<>(studyCondition.getMeetingDays());
+        Set<String> userMeetingDays = new HashSet<>(user.getMeetingDays());
+//        user.getMeetingDays().forEach(meetingDays -> userMeetingDays.add(meetingDays.name()));
+        // topic의 교집합 구하기
+        Set<String> topicIntersection = new HashSet<>(studyTopic);
+        topicIntersection.retainAll(userTopic);
+        //meetingDay의 교집합 구하기
+        Set<String> meetingDayIntersection = new HashSet<>(studyMeetingDays);
+        meetingDayIntersection.retainAll(userMeetingDays);
+
+        int sameTopics = topicIntersection.size();
+        int diffTopics = topicCount - sameTopics;
+        int sameMeetingDays = meetingDayIntersection.size();
+        int diffMeetingDays = meetingDaysCount - sameMeetingDays;
+
+        // 4. 점수 더하기고 평균 내기
+        return  (topicCount * eachOfTopic - (diffTopics * eachOfTopic * 0.001))
+                + (meetingDaysCount * eachOfMeetingDays - (diffMeetingDays * 0.001));
+
+
+    }
 }
